Refined project overview descriptions for clarity and detail, enhancing user support and reporting capabilities.

--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
 
         <h2>Value</h2>
         <ul>
-          <li>Give users a clear overview of their projects (status, next steps, contacts) and reduce email back-and-forth.</li>
-          <li>Give staff and unit leadership a shared view of project portfolios, workloads and bottlenecks for planning and reporting.</li>
+          <li>Give users a clear overview of their projects (including status, next steps, and contacts) to reduce email back-and-forth. Support users in managing their time and planning, including adapting to changes. Enable users to plan and manage next steps.</li>
+          <li>Provide staff and unit leadership with a shared view of project portfolios, workloads, and bottlenecks for planning and reporting. Reduce the effort required to collect data for reports and enable on-demand report creation when needed.</li>
           <li>Provide SciLifeLab with comparable cross-platform project data and evidence to inform future User Portal and IDS developments.</li>
         </ul>
 
