Cleaned up text

--- a/index.html
+++ b/index.html
@@ -315,23 +315,23 @@
     <div class="layout">
       <main class="card">
         <h2>Scope</h2>
-        <p>Minimal, extensible web-based Project Tracking service for SciLifeLab units with consistent project records, role-based views (users, staff, management), simple lifecycle and milestones, and notifications.</p>
+        <p>Minimal, extensible web-based Project Tracking service for SciLifeLab units with consistent project records, role-based views (users, staff, management), simple lifecycle, milestones, and notifications.</p>
 
         <h2>Out of scope</h2>
-        <p>Full User Portal functionality; replacement of ordering, billing or LIMS systems, and complex workflow automation beyond basic statuses and milestones.</p>
+        <p>Full User Portal functionality; replacement of ordering, billing or LIMS systems; complex workflow automation beyond basic statuses and milestones.</p>
 
         <h2>Value</h2>
         <ul>
-          <li>Give users a clear overview of their projects (including status, next steps, and contacts) to reduce email back-and-forth. Support users in managing their time and planning, including adapting to changes. Enable users to plan and manage next steps.</li>
-          <li>Provide staff and unit leadership with a shared view of project portfolios, workloads, and bottlenecks for planning and reporting. Reduce the effort required to collect data for reports and enable on-demand report creation when needed.</li>
+          <li>Give users a clear project overview (status, next steps, contacts) to reduce email back-and-forth. Support time management, planning, and adapting to changes.</li>
+          <li>Provide staff and unit leadership with a shared view of project portfolios, workloads, and bottlenecks for planning and reporting. Reduce reporting effort and enable on-demand report creation.</li>
           <li>Provide SciLifeLab with comparable cross-platform project data and evidence to inform future User Portal and IDS developments.</li>
         </ul>
 
         <h2>Main deliverables</h2>
         <ul>
-          <li>Project Tracking service for the SciLifeLab community (staff and researchers), providing clear project overviews, statuses, next steps and contacts.</li>
-          <li>Minimal, robust architecture, data model and integration design that enables the service to interoperate with IAM, Order Portal (or similar) and identifier services.</li>
-          <li>Production-ready web application adopted by an initial 2–4 units and, by project end, a larger set of additional units beyond the pilot group.</li>
+          <li>Project Tracking service for the SciLifeLab community (staff and researchers) with clear project overviews, statuses, next steps and contacts.</li>
+          <li>Minimal, robust architecture, data model and integration design enabling interoperability with IAM, Order Portal (or similar) and identifier services.</li>
+          <li>Production-ready web application adopted by 2–4 initial units, expanding to additional units beyond the pilot group by project end.</li>
         </ul>
 
         <h2>Dependencies</h2>
