--- a/index.html
+++ b/index.html
@@ -374,38 +374,43 @@
                 <td class="activity-cell">Confirm pilot scope and collaboration model with selected units.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
-              <tr data-activity="Conduct user research and mock-up reviews with units and researchers.">
+              <tr data-activity="Introduce concepts and collect insights about success criteria and pitfalls">
                 <td>Jan–Feb 2026</td>
-                <td class="activity-cell">Conduct user research and mock-up reviews with units and researchers.</td>
+                <td class="activity-cell">Introduce concepts and collect insights about success criteria and pitfalls</td>
+                <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
+              </tr>
+              <tr data-activity="Initial UX concept and key mock-ups for user, staff and management views agreed with pilot units.">
+                <td>Feb–Mar 2026</td>
+                <td class="activity-cell">Initial UX concept and key mock-ups for user, staff and management views agreed with pilot units.</td>
+                <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
+              </tr>
+              <tr data-activity="Testing and evaluation with users and staff.">
+                <td>Mar 2026</td>
+                <td class="activity-cell">Testing and evaluation with users and staff</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Define MVP architecture, APIs, notification strategy, logging and hosting approach.">
-                <td>Mar 2026</td>
+                <td>Apr 2026</td>
                 <td class="activity-cell">Define MVP architecture, APIs, notification strategy, logging and hosting approach.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Build pilot: core web app for users and staff plus initial integrations (IAM, identifiers).">
-                <td>Apr–Jun 2026</td>
+                <td>Apr–Jul 2026</td>
                 <td class="activity-cell">Build pilot: core web app for users and staff plus initial integrations (IAM, identifiers).</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Pilot-ready release and onboarding of first units.">
-                <td>Jun 2026</td>
+                <td>Jul 2026</td>
                 <td class="activity-cell">Pilot-ready release and onboarding of first units.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
-              <tr data-activity="Mid-pilot evaluation and quick improvements.">
-                <td>Jul 2026</td>
-                <td class="activity-cell">Mid-pilot evaluation and quick improvements.</td>
-                <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
-              </tr>
-              <tr data-activity="Extended pilot and preparation for scale-out.">
+              <tr data-activity="Mid-pilot evaluation and improvements.">
                 <td>Aug 2026</td>
-                <td class="activity-cell">Extended pilot and preparation for scale-out.</td>
+                <td class="activity-cell">Mid-pilot evaluation and improvements.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Roll-out to additional units.">
-                <td>Sep–Nov 2026</td>
+                <td>Sep–Oct 2026</td>
                 <td class="activity-cell">Roll-out to additional units.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
