Fixed main title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Project database &amp; viewer – SciLifeLab IDS</title>
+  <title>Project Tracking – SciLifeLab IDS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
